fix: update field overflow

--- a/app/pages/Test/test.scss
+++ b/app/pages/Test/test.scss
@@ -29,6 +29,7 @@
             .stages {
                 width: 100%;
                 height: 20%;
+                flex-shrink: 0;
                 border-bottom: 1px solid #0260e8;
                 display: flex;
                 gap: 0.5rem;
@@ -65,6 +66,7 @@
                 flex-wrap: wrap;
                 align-items: flex-start;
                 gap: 1rem;
+                overflow-y: auto;
 
                 .field {
                     border-radius: 5px;
